k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvum-api
  namespace: cvum
spec:
  selector:
    app: cvum-api
  ports:
    - port: 80
      targetPort: 8000
